[gd_scene load_steps=3 format=3 uid="uid://b44rlr8ay6jxr"]

[ext_resource type="Script" path="res://feature/items/item_information.gd" id="1_x5t6r"]
[ext_resource type="PackedScene" uid="uid://o7ms6nil7dwq" path="res://feature/items/item_interaction.tscn" id="3_lc75j"]

[node name="ItemInformationPanel" type="MarginContainer"]
custom_minimum_size = Vector2(40, 60)
offset_right = 280.0
offset_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_x5t6r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Item Name"
vertical_alignment = 1
autowrap_mode = 3

[node name="CloseSpace" type="Control" parent="VBoxContainer/Control"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Item discription"
fit_content = true
scroll_active = false

[node name="PanelContainer1" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_lc75j")]
layout_mode = 2

[node name="PanelContainer2" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_lc75j")]
layout_mode = 2

[node name="PanelContainer3" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_lc75j")]
layout_mode = 2

[node name="PanelContainer4" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_lc75j")]
layout_mode = 2

[node name="PanelContainer5" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_lc75j")]
layout_mode = 2

[node name="PanelContainer6" parent="VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_lc75j")]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PickUpButton" type="Button" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Pick UP"

[connection signal="pressed" from="VBoxContainer/Buttons/PickUpButton" to="." method="_on_pick_up_button_pressed"]
